--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
   </head>
   <body>
     <div class="content-block">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="content-block-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered">
       <p id="add-elem">
-        <label for="new-task">Add Item</label>
+        <label class="title label-title" for="new-task">Add Item</label>
         <div class="task-wrapper">
-          <input id="new-task" class="task" type="text">
+          <input id="new-task" class="task task-input" type="text">
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleted">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+      <h3 class="title">Todo</h3>
+      <ul class="list" id="incompleted">
+        <li class="list-item">
+          <input class="checkbox" type="checkbox">
+          <label class="task task-label">Pay Bills</label>
+          <input type="text" class="task task-input">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+        <li class="list-item edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="task task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input">
           <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+      <h3 class="title">Completed</h3>
+      <ul class="list" id="completed">
+        <li class="list-item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="task-label task">See the Doctor</label>
+          <input type="text" class="task task-input">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
