fix: semantics tags acc. to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="content-block">
+    <section class="content-block">
       <img class="content-block-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered">
+    </section>
+    <section class="centered">
       <p id="add-elem">
         <label class="title label-title" for="new-task">Add Item</label>
         <div class="task-wrapper">
@@ -45,7 +45,7 @@
           <button class="delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
