--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section class="content-block">
-      <img class="content-block-image" src="./eisenhower-matrix.jpg">
+      <img class="content-block-image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="centered">
@@ -25,14 +25,14 @@
           <label class="task task-label">Pay Bills</label>
           <input type="text" class="task task-input">
           <button class="edit">Edit</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
         <li class="list-item edit-mode">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task task-input">
           <button class="edit">Save</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
       <h3 class="title">Completed</h3>
@@ -42,7 +42,7 @@
           <label class="task-label task">See the Doctor</label>
           <input type="text" class="task task-input">
           <button class="edit">Edit</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </section>
