refactor: rename classes in BEM acc. to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <section class="content-block">
-      <img class="content-block-image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <section class="top">
+      <img class="top__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="top__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="centered">
       <p id="add-elem">
@@ -20,14 +20,14 @@
       </p>
       <h3 class="title">Todo</h3>
       <ul class="list" id="incompleted">
-        <li class="list-item">
+        <li class="list__item">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Pay Bills</label>
           <input type="text" class="task task-input">
           <button class="edit">Edit</button>
           <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
-        <li class="list-item edit-mode">
+        <li class="list__item edit-mode">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task task-input">
@@ -37,7 +37,7 @@
       </ul>
       <h3 class="title">Completed</h3>
       <ul class="list" id="completed">
-        <li class="list-item">
+        <li class="list__item">
           <input class="checkbox" type="checkbox" checked>
           <label class="task-label task">See the Doctor</label>
           <input type="text" class="task task-input">
