refactor: some fixes in BEM rule

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="centered">
       <p id="add-elem">
         <label class="title label-title" for="new-task">Add Item</label>
-        <div class="task-wrapper">
-          <input id="new-task" class="task task-input" type="text">
-          <button>Add</button>
+        <div class="add-task">
+          <input class="task task-input" id="new-task" type="text">
+          <button class="add-task__btn">Add</button>
         </div>
       </p>
       <h3 class="title">Todo</h3>
@@ -23,14 +23,14 @@
         <li class="list__item">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Pay Bills</label>
-          <input type="text" class="task task-input">
+          <input class="task task-input" type="text">
           <button class="edit">Edit</button>
           <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
         <li class="list__item edit-mode">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-input">
+          <input class="task task-input" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
@@ -40,7 +40,7 @@
         <li class="list__item">
           <input class="checkbox" type="checkbox" checked>
           <label class="task-label task">See the Doctor</label>
-          <input type="text" class="task task-input">
+          <input class="task task-input" type="text">
           <button class="edit">Edit</button>
           <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
