--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
           <label class="task task-label">Pay Bills</label>
           <input class="task task-input" type="text">
           <button class="edit">Edit</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
+          <button class="delete">
+            <img class="delete-img" src="./remove.svg" alt="delete icon">
+          </button>
         </li>
         <li class="list__item edit-mode">
           <input class="checkbox" type="checkbox">
           <label class="task task-label">Go Shopping</label>
           <input class="task task-input" type="text" value="Go Shopping">
           <button class="edit">Save</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
+          <button class="delete">
+            <img class="delete-img" src="./remove.svg" alt="delete icon">
+          </button>
         </li>
       </ul>
       <h3 class="title">Completed</h3>
@@ -42,7 +46,9 @@
           <label class="task-label task">See the Doctor</label>
           <input class="task task-input" type="text">
           <button class="edit">Edit</button>
-          <button class="delete"><img class="delete-img" src="./remove.svg" alt=""></button>
+          <button class="delete">
+            <img class="delete-img" src="./remove.svg" alt="delete icon">
+          </button>
         </li>
       </ul>
     </section>
